force-app/main/objects/Account_Intelligence__c.object
<CustomObject>
    <description>This is used  as a junction object between accounts and systems which will be used in Account Planning</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Intelligences</relationshipLabel>
        <relationshipName>Account_Intelligences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Plan</label>
        <referenceTo>Account_Plan__c</referenceTo>
        <relationshipLabel>Account Intelligences</relationshipLabel>
        <relationshipName>Account_Intelligences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Intelligence_Name__c</fullName>
        <formula>AccountName__r.Name + &apos; &apos; +  Salesforce_System_Id__r.System_Name__c</formula>
        <label>Account Intelligence Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Intelligence_Type__c</fullName>
        <label>Account Intelligence Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Core HR System/s</fullName>
                </value>
                <value>
                    <fullName>Applicant Tracking System/s (ATS)</fullName>
                </value>
                <value>
                    <fullName>Learning Management System/s (LMS)</fullName>
                </value>
                <value>
                    <fullName>IT Provider/s</fullName>
                </value>
                <value>
                    <fullName>Level of integration of HR systems</fullName>
                </value>
                <value>
                    <fullName>Other comments re platforms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Archived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salesforce_System_Id__c</fullName>
        <label>HRMS System</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>System__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>HR_MS_System</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>System__c</referenceTo>
        <relationshipLabel>Account Intelligences</relationshipLabel>
        <relationshipName>Account_Intelligences</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>TEXT(Salesforce_System_Id__r.Sub_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technographic_Category__c</fullName>
        <formula>TEXT(Salesforce_System_Id__r.Technographic_Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technographic Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technology__c</fullName>
        <formula>Salesforce_System_Id__r.Technology__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Technology</label>
        <type>Text</type>
    </fields>
    <label>Account Intelligence</label>
    <nameField>
        <displayFormat>AI{000000}</displayFormat>
        <label>Account Intelligence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Intelligences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AccountShouldNotBeSanctioned</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(AccountName__r.Status__c) = &apos;Rejected - Sanctioned Account&apos;</errorConditionFormula>
        <errorMessage>Operation not allowed as Account is marked Rejected - Sanctioned Account</errorMessage>
    </validationRules>
</CustomObject>